--- a/germpop.Rmd
+++ b/germpop.Rmd
@@ -42,12 +42,10 @@ plot = ggplot(data = gerpop,
                   y = data, 
                   group = 1
                   )
-              ) 
-+ 
+              ) + 
   geom_line(size = 1.5, 
             color = "blue"
-            ) 
-+ scale_x_continuous(breaks = seq(2000, 
+            ) + scale_x_continuous(breaks = seq(2000, 
                                   2018, 
                                   2
                                   )
@@ -57,8 +55,7 @@ plot
 plot = plot + labs(title = "German mid year population estimate", 
                    x = "Year", 
                    y = "Population in '000", 
-                   caption = "https://unstats.un.org") 
-+ theme_dark()
+                   caption = "https://unstats.un.org") + theme_dark()
 
 ```
 
